--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
  
+@import url("./fonts.css");
+
 @layer base {
   :root {
     --background: 0 0% 100%;
