--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -10,3 +10,7 @@
     font-family: "Roboto Medium";
     src: url("/fonts/roboto/Roboto-Medium.ttf") format("truetype");
 }
+@font-face {
+    font-family: "Roboto Italic";
+    src: url("/fonts/roboto/Roboto-Italic.ttf") format("truetype");
+}
